--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="backspace"><![CDATA[<]]></string>
+    <string name="digits_exceeded_toast">Maximum number of digits(12) exceeded.</string>
 </resources>
